--- a/board.html
+++ b/board.html
@@ -41,7 +41,10 @@
     <link rel="stylesheet" href="./styles/styleSidebar.css" />
     <link rel="stylesheet" href="./styles/summary.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
-    <link rel="stylesheet" href="./styles/board.css"/>
+    <link rel="stylesheet" href="./styles/board.css" />
+    <link rel="stylesheet" href="./styles/coloris.min.css" />
+    
+
     <script defer src="./scripts/storage.js"></script>
     <script defer src="./scripts/board.js"></script>
     <!-- <script defer src="./scripts/summary.js"></script> -->
@@ -49,16 +52,18 @@
     <script src="./scripts/addtask.js"></script>
     <script defer src="./scripts/animations.js"></script>
     <script defer src="./scripts/bootstrap.js"></script>
+    <script defer type="text/javascript" src="./scripts/coloris.min.js"></script>
 
     <title>Board</title>
   </head>
   <body onload="initBoard(); includeHTML(); ">
     <div w3-include-html="./templates/sidebar.html"></div>
-    <div class="modal-backdrop modal">
-      <form onsubmit="addTask();" class="popUpBoardTask">
-        <img src="./img/close.svg" alt="Close Add Task Form" class="boardTaskClose" onclick="closeModal(document.querySelector('.modal'))">
+    <div class="modal-backdrop modal ">
+      <form onsubmit="addTask(); return false" class="addTaskFormWrapper">
+        <h1 class="font61 addTaskHeadline">Add Task</h1>
+        <img src="./img/close.svg" alt="Close Add New Task" class="closeAddTask" onclick="closeModal(document.querySelector('.modal'))">
         <button onclick="getAssignedContacts()" type="submit"
-        class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg xmlns="http://www.w3.org/2000/svg"
+        class="d-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg xmlns="http://www.w3.org/2000/svg"
           width="25" height="25" viewBox="0 0 25 25" fill="none">
           <path d="M4.0166 12.1704L10.0166 18.1704L20.0166 6.17041" stroke="white" stroke-width="2"
             stroke-linecap="round" stroke-linejoin="round" />
