--- a/addtask.html
+++ b/addtask.html
@@ -149,6 +149,9 @@
       </div>
     </div>
   </form>
+  <div id="board-btn-container" class="addTaskBoard font20 display-none">
+    <button class="add-to-board-btn">Task added to board <img id="add-to-board-btn-img" src="./img/board.svg"></button>
+  </div>
   </div>
   <script type="text/javascript" src="./scripts/coloris.min.js"></script>
 </body>
