basics for responsive new classes to img

--- a/contacts.html
+++ b/contacts.html
@@ -106,6 +106,9 @@
 
     <!-- Add new Contact -->
     <dialog id="dialog__createContact">
+      <button class="btn-resp-x" onclick="cancelCreateContact()">
+        <img src="./img/responsive_close_X_white.svg" alt="close dialog window">
+      </button>
       <div class="dialog__createLeftSide">
         <img src="./img/logo_white.svg" alt="White Join Logo" />
         <h2>Add contact</h2>
