--- a/contacts.html
+++ b/contacts.html
@@ -53,7 +53,7 @@
     <!-- Edit Contact -->
     <dialog id="dialog__editContact">
       <div class="dialog__editLeftSide">
-        <img src="./img/logo_white.svg" alt="White Join Logo" />
+        <img class="logo-white" src="./img/logo_white.svg" alt="White Join Logo" />
         <h2>Edit contact</h2>
         <span class="dialog__blue-line"></span>
       </div>
