added guest if no user is defined

--- a/summary.html
+++ b/summary.html
@@ -148,7 +148,7 @@
           <div>
             <div id="whichHour" class="size2Em">Good morning,</div>
             <div class="size3Em bold fontColorBlue" id="welcome-user">
-              Sofia Müller
+              Guest
             </div>
           </div>
         </div>
