--- a/contacts.html
+++ b/contacts.html
@@ -62,7 +62,7 @@
   </dialog>
 
   <!-- Add new Contact -->
-  <dialog id="dialog__createContact" class="resp-none">
+  <dialog class="resp-none" id="dialog__createContact" >
     <button class="btn-resp-x" onclick="cancelCreateContact()">
       <img src="./img/responsive_close_X_white.svg" alt="close dialog window">
     </button>
@@ -128,7 +128,7 @@
           <div>
             <h1 id="dialog__name">Tatjana Wolf</h1>
             <div class="d-flex gap-5">
-              <div id="dialog__editBtn" class="icon-dialog d-flex align-items-center gap-2">
+              <div id="dialog__editBtn" class="icon-dialog d-flex align-items-center gap-2 resp-none">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                   <mask id="mask0_71421_3311" style="mask-type: alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24"
                     height="24">
