removing bootstrap for better styling in responsive

--- a/contacts.html
+++ b/contacts.html
@@ -118,7 +118,7 @@
       </div>
 
       <dialog close id="dialogContact">
-        <div class="d-flex align-items-center justify-content-around gap-5">
+        <div class="dialog-header">
           <div class="circle dialog__circle">
           </div>
 
