--- a/privacy.html
+++ b/privacy.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="styles/privacy.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <script src="scripts/sidebar.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
 
 <body onload="includeHTML()">
@@ -19,8 +24,9 @@
             <div class="privacy-headline">
                 <h1>Privacy Policy</h1>
             </div>
-            <div class="privacy-button">
-                <svg class="privacy-svg" xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="none">
+            <div onclick="goBack()" class="privacy-button">
+                <svg class="privacy-svg" xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32"
+                    fill="none">
                     <path
                         d="M10.9373 14.6667H25.8333C26.5696 14.6667 27.1666 15.2636 27.1666 16C27.1666 16.7364 26.5696 17.3333 25.8333 17.3333H10.9373L17.1466 23.5427C17.6672 24.0633 17.6672 24.9074 17.1466 25.428C16.626 25.9486 15.7819 25.9486 15.2613 25.428L7.24746 17.4142C6.46642 16.6332 6.46642 15.3668 7.24747 14.5858L15.2613 6.572C15.7819 6.05138 16.626 6.05138 17.1466 6.572C17.6672 7.09262 17.6672 7.93671 17.1466 8.45733L10.9373 14.6667Z"
                         fill="#29ABE2" />
