addTask in Board & error fixes

--- a/addtask.html
+++ b/addtask.html
@@ -21,7 +21,7 @@
   <div class="add-task-section">
     <h1 class="font61">Add Task</h1>
 
-    <form onsubmit="addTask(); return false">
+    <form onsubmit="addTask('to do', event); return false">
 
       <button onclick="getAssignedContacts()" type="submit"
       class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg xmlns="http://www.w3.org/2000/svg"
