--- a/addtask.html
+++ b/addtask.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./styles/taskstyle.css">
   <link rel="stylesheet" href="./styles/styleSidebar.css">
   <link rel="stylesheet" href="./styles/coloris.min.css" />
+  <link rel="stylesheet" href="styles/style.css">
   <script src="./scripts/sidebar.js"></script>
   <script src="./scripts/bootstrap.js"></script>
   <script src="./scripts/addtask.js"></script>
