changed file links for server

--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/img/favicon/apple-touch-icon.png"
+      href="./img/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/img/favicon/favicon-32x32.png"
+      href="./img/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/img/favicon/favicon-16x16.png"
+      href="./img/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/img/favicon/site.webmanifest" />
+    <link rel="manifest" href="./img/favicon/site.webmanifest" />
     <link
       rel="mask-icon"
-      href="/img/favicon/safari-pinned-tab.svg"
+      href="./img/favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
-    <link rel="shortcut icon" href="/img/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="./img/favicon/favicon.ico" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta
       name="msapplication-config"
-      content="/img/favicon/browserconfig.xml"
+      content="./img/favicon/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
     <!-- FAVICON END -->
@@ -41,7 +41,7 @@
     <script src="./scripts/bootstrap.js"></script>
     <script src="./scripts/storage.js"></script>
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>JOIN</title>
   </head>
   <body onload="init();">
