fixed the responsive sidebar (height and sizes, text gets shown now)

--- a/privacy.html
+++ b/privacy.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="styles/styleSidebar.css" />
     <link rel="stylesheet" href="styles/privacy.css" />
     <link rel="stylesheet" href="styles/fonts.css" />
+    <link rel="stylesheet" href="styles/bootstrap.css">
     <script src="scripts/sidebar.js"></script>
     <script>
       function goBack() {
