--- a/help.html
+++ b/help.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/help.css">
+    <link rel="stylesheet" href="styles/bootstrap.css">
     <script src="scripts/sidebar.js"></script>
     <script>
         function goBack() {
