login, logout function

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- FAVICON END -->
     <link rel="stylesheet" href="./styles/bootstrap.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
-    <script src="./scripts/sidebar.js"></script>
+    <!-- <script src="./scripts/sidebar.js"></script> -->
     <script src="./scripts/bootstrap.js"></script>
     <script src="./scripts/storage.js"></script>
     <link rel="stylesheet" href="./styles/fonts.css" />
