feat: showNewContact rendering new Contact in dialog small css responsive changes

--- a/contacts.html
+++ b/contacts.html
@@ -107,7 +107,7 @@
           <button class="custom-btn-white btn-hover" id="dialog__createDeleteBtn" onclick="cancelCreateContact()">
             Cancel X
           </button>
-          <button class="custom-btn btn-hover btn-save" id="dialog__createSaveBtn" onclick="addNewContact();">
+          <button class="custom-btn btn-hover btn-save" id="dialog__createSaveBtn" onclick="addNewContact()">
             Save
           </button>
 
