--- a/contacts.html
+++ b/contacts.html
@@ -217,6 +217,10 @@
 
   </div>
 
+  <div id="contacts-btn-container" class="addContact resp-none">
+    <button class="add-to-contacts-btn">Contact created</button>
+  </div>
+
   <script src="./scripts/contacts.js"></script>
   <script src="./scripts/bootstrap.js"></script>
 </body>
