--- a/legal.html
+++ b/legal.html
@@ -70,7 +70,7 @@
 
             <div>
                 <h3 class="font20">Scope and ownership of the product</h3>
-                <p class="font16">oin has been developed as part of a student group project in a web development bootcamp at the
+                <p class="font16"><a class="join-link" href="./help.html">Join</a> has been developed as part of a student group project in a web development bootcamp at the
                     <a class="developer-link" href="https://developerakademie.com/">Developer Akademie GmbH</a>. It has an educational purpose and is not intended for extensive personal &
                     business usage. As such, we cannot guarantee consistent availability, reliability, accuracy, or any
                     other aspect of quality regarding this Product. The design of <a class="join-link" href="./help.html">Join</a> is owned by the Developer
