added redirection on summary

--- a/summary.html
+++ b/summary.html
@@ -63,7 +63,7 @@
       <div class="childDiv">
         <div class="firstContainer">
           <div class="item-1">
-            <div
+            <div onclick="redirect()"
               class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center"
             >
               <div id="task-count" class="size3Em bold">0</div>
@@ -72,7 +72,7 @@
                 <div>Board</div>
               </div>
             </div>
-            <div
+            <div onclick="redirect()"
               class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center"
             >
               <div id="progress-count" class="size3Em bold">0</div>
@@ -81,7 +81,7 @@
                 <div>Progress</div>
               </div>
             </div>
-            <div
+            <div onclick="redirect()"
               class="bgWhite border py-3 px-5 rounded-5 d-flex flex-column align-items-center justify-content-center text-center"
             >
               <div id="feedback-count" class="size3Em bold">0</div>
@@ -92,7 +92,7 @@
             </div>
           </div>
 
-          <div class="bgWhite border py-3 rounded-5 item-2">
+          <div onclick="redirect()" class="bgWhite border py-3 rounded-5 item-2">
             <div class="border-end border-3 d-flex justify-content-center">
               <div class="d-flex align-items-center">
                 <img src="./img/prio_urgent.svg" alt="urgent" />
@@ -111,7 +111,7 @@
           </div>
 
           <div class="item-3">
-            <div
+            <div onclick="redirect()"
               onmouseover="whitePencil()"
               onmouseout="darkPencil()"
               class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center"
@@ -126,7 +126,7 @@
                 <div class="noWrapWords">To-do</div>
               </div>
             </div>
-            <div
+            <div onclick="redirect()"
               onmouseover="whiteOk()"
               onmouseout="darkOk()"
               class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center"
